--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,3 +3,4 @@ RNImpressaoZebraMovel_minSdkVersion=21
 RNImpressaoZebraMovel_targetSdkVersion=31
 RNImpressaoZebraMovel_compileSdkVersion=31
 RNImpressaoZebraMovel_ndkversion=21.4.7075529
+android.useAndroidX=true
